# bl1nkos-v4.0-desktop-first-architecture-project-vision-revised-bl1nkos-v4.0-desktop-first-ai-writin

./: package.json  tsconfig.base.json  turbo.json
.kilocode/rules/memory-bank/: context.md
apps/desktop/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: config.rs  file.rs  mcp.rs  mod.rs  plugin.rs  terminal.rs
apps/desktop/src-tauri/src/config/: mod.rs
apps/desktop/src-tauri/src/mcp/: mod.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src-tauri/src/terminal/: mod.rs
apps/desktop/src-web/: package.json
apps/desktop/src-web/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src-web/components/: providers.tsx
apps/desktop/src-web/lib/: tauri-bridge.ts
src/app/: page.tsx
